<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Questionnaire</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Edit Text Field Hint -->
    <string name="first">First Name</string>
    <string name="last">Last Name</string>

    <!-- These two strings refer to the questions used in the app -->
    <string name="question_one">How would you describe your mood right now?</string>
    <string name="question_two">And how would you describe your mood last week?</string>
    <string name="question_three">And how would you describe your feelings regarding these intrusive questions?</string>

    <!-- The following strings refer to button names for all questions -->
    <string name="ecstatic">Ecstatic</string>
    <string name="happy">Happy</string>
    <string name="neutral">Neutral</string>
    <string name="sad">Sad</string>
    <string name="devastated">Devastated</string>

    <!-- Button Names -->
    <string name="evaluate">Evaluate</string>
    <string name="clear">Clear</string>
    <string name="send">Send Evalution</string>
    
    <string name="title_activity_display_results">Evaluation Results</string>

</resources>